feat: package name change and version update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "1riconstore",
-  "version": "1.0.0",
+  "name": "angular1r",
+  "version": "1.0.1",
   "description": "angular icon library test",
   "main": "index.js",
   "sideEffects": false,
